# DIO_python_sistema_bancario

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  sistema_bancario.py
sistema_bancario/: __init__.py  __main__.py  cli.py  configuracao.py  sistema.py  utils.py
